fix first text format issue & align paragraph children

--- a/src/components/cell-content/cell-content.scss
+++ b/src/components/cell-content/cell-content.scss
@@ -11,7 +11,7 @@ cell-content {
     > p {
         position: relative;
         display: flex;
-        flex-direction: column;
+        align-items: baseline;
         margin: initial;
         padding: initial;
         z-index: 2;
